--- a/src/components/MainSidebar.css
+++ b/src/components/MainSidebar.css
@@ -4,7 +4,11 @@
   border-right: 1px solid #21262d;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  overflow-y: auto;
 }
 
 .sidebar-header {
